--- a/pom.xml
+++ b/pom.xml
@@ -98,12 +98,17 @@
 			<version>1.7.4</version>
 		</dependency>
 		<dependency>
-  <groupId>org.assertj</groupId>
-  <artifactId>assertj-core</artifactId>
-  <!-- use 2.9.1 for Java 7 projects -->
-  <version>3.10.0</version>
-  <scope>test</scope>
-</dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<!-- use 2.9.1 for Java 7 projects -->
+			<version>3.10.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.7</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -167,7 +172,7 @@
 						<configuration>
 							<scanIntervalSeconds>0</scanIntervalSeconds>
 							<daemon>true</daemon>
-							<stopKey>${jetty.stopKey}</stopKey> 
+							<stopKey>${jetty.stopKey}</stopKey>
 							<stopPort>${jetty.stopPort}</stopPort>
 						</configuration>
 					</execution>
